[package]
name = "calcanalyzer"
version = "0.1.0"
authors = ["renorram brandão<renorramsilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "calcanalyzer"
test = false
bench = false
path = "src/main.rs"
